# Arte-Ogre

./: .gitignore  CONTRIBUTING.md  CREDITS.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml
assets/: README.md
crates/ogre/: Cargo.toml
crates/ogre-core/: Cargo.toml
crates/ogre-core/benches/: core_benches.rs  heavy_benches.rs
crates/ogre-core/src/: brush.rs  buffer.rs  commands.rs  compositor.rs  coord.rs  document.rs  error.rs  history.rs  layer.rs  lib.rs  pixel.rs  resample.rs  selection.rs  text.rs  tile.rs
crates/ogre-core/src/ops/: bucket.rs  extract.rs  finger_ops.rs  flip.rs  gradient.rs  layer_ops.rs  magic_wand.rs  magnetic.rs  mask.rs  matte.rs  mod.rs
crates/ogre-core/tests/: birdseye_insert.rs  error_smoke.rs  invariants.rs  killer_feature.rs  phase_1_0_smoke.rs  undo_roundtrip.rs  vector_parity.rs
crates/ogre-gpu/: Cargo.toml
crates/ogre-gpu/benches/: filter_throughput.rs
crates/ogre-gpu/src/: blend.rs  canvas_renderer.rs  compositor.rs  context.rs  filters.rs  lib.rs  tile_cache.rs  viewport.rs
crates/ogre-gpu/src/shaders/: adjustment.wgsl  blend.wgsl  blend_batch.wgsl  present.wgsl
crates/ogre-gpu/tests/: canvas_renderer.rs  composite_perf.rs  golden_blend.rs  readback.rs
crates/ogre-io/: Cargo.toml
crates/ogre-io/benches/: file_io.rs
crates/ogre-io/src/: color.rs  error.rs  interchange.rs  lib.rs  matte_ml.rs  ogre.rs  raster.rs  svg.rs
crates/ogre-io/tests/: end_to_end.rs
crates/ogre-plugins/: Cargo.toml
crates/ogre-plugins/src/: filter.rs  lib.rs  manager.rs  script.rs
crates/ogre-plugins/src/shaders/: plugin_passthrough.wgsl
crates/ogre-plugins/tests/: examples.rs
crates/ogre-plugins/wit/: ogre-plugin.wit
crates/ogre-ui/: Cargo.toml  README.md
crates/ogre-ui/assets/icons/: LICENSE
crates/ogre-ui/src/: command_palette.rs  context_menu.rs  dispatch.rs  grid.rs  help.rs  icons.rs  io_worker.rs  keymap.rs  lib.rs  open_flow.rs  paste.rs  plugin_worker.rs  prefs.rs  shell.rs  state.rs  welcome.rs
crates/ogre-ui/src/panels/: canvas.rs  layers.rs  mod.rs  plugin_manager.rs  tools_sidebar.rs
crates/ogre-ui/src/theme/: derive.rs  mod.rs  visuals.rs
crates/ogre-ui/src/tools/: brush.rs  clone_stamp.rs  crop.rs  ellipse_select.rs  fill.rs  finger.rs  gradient.rs  healing.rs  lasso.rs  magic_wand.rs  magnetic_lasso.rs  mod.rs  path_select.rs  pen.rs  quick_select.rs  rect_select.rs  shape.rs  slice.rs  smudge.rs  transform.rs  type_tool.rs  vector_commit.rs  zoom.rs
crates/ogre-ui/src/views/: birds_eye.rs  credits.rs  licenses.rs  mod.rs  plugins.rs  settings.rs
crates/ogre-ui/src/views/birds_eye/: drag.rs  thumbnail.rs
crates/ogre-ui/tests/: coords_tests.rs  dispatch_tests.rs  killer_ui_tests.rs
crates/ogre-vector/: Cargo.toml
crates/ogre-vector/src/: lib.rs  rasterize.rs  stroke.rs  text.rs
crates/ogre/src/: main.rs
examples/plugins/cut_selection_lua/: cut_selection.lua  plugin.toml
examples/plugins/invert_wasm/: invert.wat  plugin.toml
scripts/: build_appimage.sh  gate.sh  licenses.sh
