[package]
name = "ogre-core"
version = "1.3.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
glam = { workspace = true }
slotmap = { workspace = true }
ahash = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
rmp-serde = { workspace = true }

[[bench]]
name = "core_benches"
harness = false

[[bench]]
name = "heavy_benches"
harness = false
