[package]
name = "ogre-plugins"
version = "1.3.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ogre-core = { path = "../ogre-core" }
ogre-gpu = { path = "../ogre-gpu" }
wasmtime = "46.0"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
thiserror = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
wat = "1"
