[package]
name = "ogre-ui"
version = "1.3.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
# AI matte refinement in Remove Background (pulls the ONNX runtime via ogre-io).
ml = ["ogre-io/ml"]

[dependencies]
ahash = { workspace = true }
arboard = { version = "3", features = ["wayland-data-control"] }
directories = "6"
egui = { workspace = true }
egui-wgpu = { workspace = true }
eframe = { workspace = true }
egui_dock = { workspace = true }
egui_extras = { version = "0.35", default-features = false, features = ["svg", "image"] }
glam = { workspace = true }
kurbo = "0.13"
ogre-core = { path = "../ogre-core" }
ogre-gpu = { path = "../ogre-gpu", features = ["egui"] }
ogre-io = { path = "../ogre-io" }
ogre-plugins = { path = "../ogre-plugins" }
ogre-vector = { path = "../ogre-vector" }
rfd = "0.17"
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
ureq = { workspace = true }
usvg = "0.47"
