[package]
name = "ogre"
version = "1.3.1"
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
# AI matte refinement (Remove Background "Refine with AI"). On by default so the
# shipped app has it; build with --no-default-features to drop the ONNX runtime.
default = ["ml"]
ml = ["ogre-ui/ml"]

[dependencies]
eframe = { workspace = true, features = ["wgpu"] }
egui-wgpu = { workspace = true }
wgpu = { workspace = true }
ogre-ui = { path = "../ogre-ui" }

# Linux only: force winit's X11 backend on Wayland sessions so file
# drag-and-drop works (winit has no Wayland file-drop support).
[target.'cfg(target_os = "linux")'.dependencies]
winit = "0.30"
